--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 1.3 (unreleased)
 
+** tests: Rewrite basic self test using modern API.
+
 * Version 1.2 (released 2009-06-13)
 
 ** gsasl: Fix out of bounds write when in IMAP/SMTP mode.
