--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,9 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 1.3 (unreleased)
 
+** gsasl: Fix libintl-related build errors on MinGW.
+Tiny patch from "carlo.bramix" <carlo.bramix@libero.it>.
+
 ** tests: Rewrite basic self test using modern API.
 
 ** tests: New self-test 'crypto' to increase code coverage.
