--- a/THANKS
+++ b/THANKS
@@ -39,6 +39,7 @@ Adam Goode <adam@spicenitz.org>
 Andery Melnikov <temnota.am@gmail.com>
 Vincent Untz <vuntz@opensuse.org>
 Marco Maggi <marco.maggi-ipsu@poste.it>
+"carlo.bramix" <carlo.bramix@libero.it>
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
