--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,12 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 1.3 (unreleased)
 
-** Support for SCRAM-SHA-1 added.
+** Experimental support for SCRAM-SHA-1 added.
+Please test it but don't put it into production use, the RFC have not
+been finalized yet.  For this reason, the mechanism priority list is
+such that SCRAM-SHA-1 will never be selected over any other mechanism
+(including PLAIN, CRAM-MD5, and DIGEST-MD5).  When it has been tested
+further, we'll make SCRAM-SHA-1 the preferred mechanism after GSSAPI.
 
 ** gsasl: Fix libintl-related build errors on MinGW.
 Tiny patch from "carlo.bramix" <carlo.bramix@libero.it>.
