--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Version 1.3 (unreleased)
+* Version 1.3 (released 2009-10-08)
 
 ** Experimental support for SCRAM-SHA-1 added.
 Please test it but don't put it into production use, the RFC have not
