--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,7 +2,7 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson
 See the end for copying conditions.
 
-* Version 1.3 (unreleased)
+* Version 1.3 (released 2009-10-08)
 
 ** libgsasl: Implement SCRAM-SHA-1.
 New properties are GSASL_SCRAM_ITER, GSASL_SCRAM_SALT, and
